feat: integrate CustomNavbar into documentation layout and update title in index.mdx

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Home
+title: DeployStack Documentation
 description: Welcome to DeployStack documentation. Learn how to automate Docker Compose deployments across cloud providers with Infrastructure as Code templates and one-click deployments.
 menuTitle: DeployStack Documentation
 ---
