feat: enhance documentation structure and metadata extraction for improved navigation and title accuracy

--- a/docs/docker-to-iac/index.mdx
+++ b/docs/docker-to-iac/index.mdx
@@ -1,7 +1,7 @@
 ---
-title: Docker to IaC
+title: Docker to Infrastructure 2
 description: Introduction to the node module docker-to-iac which allows you to transfer docker-compose into IaC templates
-menuTitle: Docker-to-IaC
+sidebar: lol text
 ---
 
 # Docker to Infrastructure as Code Module
