feat: add icon to index.mdx and update layout.tsx sidebar configuration

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: DeployStack Documentation
 description: Welcome to DeployStack documentation. Learn how to automate Docker Compose deployments across cloud providers with Infrastructure as Code templates and one-click deployments.
+icon: CircleHelp
 ---
 
 import { CloudUpload, Terminal, FileText, Container, BookOpenText, MessageCircleHeart } from 'lucide-react';
