--- a/docs/deploystack/getting-started.mdx
+++ b/docs/deploystack/getting-started.mdx
@@ -1,7 +1,6 @@
 ---
 title: Getting Started with DeployStack
 description: Start deploying Docker applications across cloud providers with DeployStack. Step-by-step guide to generating infrastructure templates from Docker configurations.
-menuTitle: Getting Started
 ---
 
 # Getting Started with DeployStack
@@ -100,7 +99,7 @@ Create a `.deploystack` directory in your repository with these components:
 - `docker-run.txt`: Alternative to compose file, contains your Docker run command
 - Only one of these files should be present
 
-For more configuration options please check our [.deploystack Directory Reference](/docs/deploystack/deploystack-configuration-directory.md).
+For more configuration options please check our [.deploystack Directory Reference](/docs/deploystack/deploystack-configuration-directory).
 
 ### GitHub App Integration
 
@@ -190,6 +189,6 @@ After template generation:
 
 ## Need Additional Help?
 
-- Review our detailed [Troubleshooting Guide](/docs/deploystack/troubleshooting.md)
+- Review our detailed [Troubleshooting Guide](/docs/deploystack/troubleshooting)
 - Join our active [Discord Community](https://discord.gg/UjFWwByB)
 - Submit issues on GitHub to our [Feedback repository](https://github.com/deploystackio/feedback)
