--- a/docs/deploystack/docker-compose-requirements.mdx
+++ b/docs/deploystack/docker-compose-requirements.mdx
@@ -1,7 +1,6 @@
 ---
 title: Docker Compose Requirements
 description: Technical requirements for using Docker Compose with DeployStack's cloud deployment automation. Includes supported properties, registry options, and validation rules.
-menuTitle: Docker Compose Requirements
 ---
 
 # Docker Compose Requirements
@@ -13,7 +12,7 @@ DeployStack is designed to work with Docker Compose files that meet specific req
 Your `docker-compose.yml` file must:
 
 1. Use pre-built Docker images
-2. Reference public images from Docker Hub or another registries -> check [Supported Registries](/docs/docker-to-iac/supported-registries.md)
+2. Reference public images from Docker Hub or another registries -> check [Supported Registries](/docs/docker-to-iac/supported-registries)
 3. Be a valid Docker Compose file (version 3 and above)
 
 Your docker-compose file does not necessarily have to be called `docker-compose.yml` and does not have to be located in the root directory. You can rename your docker compose file and store it in any sub directory.
@@ -26,7 +25,7 @@ If your docker compose file is not located in the root directory and has not `do
 
 Your services must specify the `image` property. For example:
 
-```yaml [docker-compose.yml]
+```yaml title="docker-compose.yml"
 # ✅ Supported
 services:
   app:
@@ -39,7 +38,7 @@ services:
 
 We do not support services that use the `build` directive:
 
-```yaml [docker-compose.yml]
+```yaml title="docker-compose.yml"
 # ❌ Not Supported
 services:
   app:
@@ -54,7 +53,7 @@ The infrastructure templates we generate require specific, immutable container i
 
 ## Supported Docker Compose Properties
 
-We currently support these Docker Compose properties -> please check [Supported Docker Compose Variables](/docs/docker-to-iac/supported-docker-compose-variables.md).
+We currently support these Docker Compose properties -> please check [Supported Docker Compose Variables](/docs/docker-to-iac/supported-docker-compose-variables).
 
 ### Kubernetes/Helm
 
@@ -75,19 +74,19 @@ DeployStack can handle Docker Compose files with multiple services, but support 
 - Others will only deploy the first service in your compose file
 - Kubernetes (Helm) supports multi-service deployments with each service becoming a separate Deployment
 
-Check the specific [Multi Services Support](/docs/docker-to-iac/multi-services-support.md) for details about multi-service support.
+Check the specific [Multi Services Support](/docs/docker-to-iac/multi-services-support) for details about multi-service support.
 
 ## Working with Private Images
 
 Currently, DeployStack only supports public images from Docker Hub. If you need to use private images:
 
-1. Make your images public on Docker Hub or [other supported registries](/docs/docker-to-iac/supported-registries.md)
+1. Make your images public on Docker Hub or [other supported registries](/docs/docker-to-iac/supported-registries)
 2. Update your docker-compose.yml to reference the public images
 3. Submit your repository to DeployStack
 
 ## Environment Variables
 
-Please read more from our [environment variables](/docs/deploystack/docker-environment-variables.md) page.
+Please read more from our [environment variables](/docs/deploystack/docker-environment-variables) page.
 
 ## Validation
 
@@ -99,5 +98,5 @@ When you submit your repository, we perform these checks:
 
 ## Next Steps
 
-- See how [One-Click Deploy](/docs/deploystack/one-click-deploy.md) works
-- Check the [Troubleshooting](/docs/deploystack/troubleshooting.md) guide if you run into issues
+- See how [One-Click Deploy](/docs/deploystack/one-click-deploy) works
+- Check the [Troubleshooting](/docs/deploystack/troubleshooting) guide if you run into issues
