--- a/docs/deploystack/github-application.mdx
+++ b/docs/deploystack/github-application.mdx
@@ -1,7 +1,6 @@
 ---
 title: GitHub Application
 description: Keep Docker configurations and deployment templates in sync with DeployStack's GitHub App. Updates templates automatically when files change.
-menuTitle: GitHub Application
 ---
 
 # GitHub App Integration
@@ -12,13 +11,14 @@ The DeployStack GitHub App ensures your Infrastructure as Code (IaC) templates r
 
 When you install the [DeployStack Repository Sync](https://github.com/apps/deploystack-repository-sync) app, it monitors specific files in your repository:
 
-- `.deploystack/` directory - [Contains your Docker configurations and assets](/docs/deploystack/deploystack-configuration-directory.md)
+- `.deploystack/` directory - [Contains your Docker configurations and assets](/docs/deploystack/deploystack-configuration-directory)
 - `README.md` - For README.md updates
 
 When changes are detected in these files, the app automatically triggers an update of your IaC templates in our [deploy-templates](https://github.com/deploystackio/deploy-templates) repository.
 
-> [!IMPORTANT]
-> Changes are only processed when they occur on your repository's **default branch**. Modifications in other branches will not trigger template, logo, config or any other updates.
+<Callout type="warn">
+Changes are only processed when they occur on your repository's **default branch**. Modifications in other branches will not trigger template, logo, config or any other updates.
+</Callout>
 
 ## Installation
 
@@ -47,12 +47,12 @@ When the app detects changes, it automatically updates:
   - Repository Homepage
   - Description
 - IaC templates
-  - Depends on which technique (docker compose or docker run command) you choose, you can upload the `docker-compose.yml` or `docker-run.txt` in the `.deploystack` directory. Every time you update the files on your main branch (or additional branch), IaC templates will be updated automatically - [Automatic Updates](/docs/deploystack/deploystack-configuration-directory.md#automatic-updates).
+  - Depends on which technique (docker compose or docker run command) you choose, you can upload the `docker-compose.yml` or `docker-run.txt` in the `.deploystack` directory. Every time you update the files on your main branch (or additional branch), IaC templates will be updated automatically - [Automatic Updates](/docs/deploystack/deploystack-configuration-directory#automatic-updates).
 - Environment variables
-  - To make it easier for a user to deploy IaC templates, it is recommended to work with environment variables. For this purpose, you can upload an `env` file and add your appropriate variables - [Environment Variables](/docs/deploystack/deploystack-configuration-directory.md#environment-variables).
+  - To make it easier for a user to deploy IaC templates, it is recommended to work with environment variables. For this purpose, you can upload an `env` file and add your appropriate variables - [Environment Variables](/docs/deploystack/deploystack-configuration-directory#environment-variables).
 - DeployStack Configuration
 - Project / Applicaton Logo
-  - It is possible to upload your own logo to DeployStack catalog. To do this you need to upload a file to our directory `.deploystack`. Read more about it here: [Repository Logo](/docs/deploystack/deploystack-configuration-directory.md#repository-logo)
+  - It is possible to upload your own logo to DeployStack catalog. To do this you need to upload a file to our directory `.deploystack`. Read more about it here: [Repository Logo](/docs/deploystack/deploystack-configuration-directory#repository-logo)
 
 ## Managing the Integration
 
@@ -66,4 +66,4 @@ After installing the app:
 2. Commit and push your changes
 3. DeployStack will automatically update your deployment templates
 
-For details about the `.deploystack` directory structure, check our [.deploystack Directory Reference](/docs/deploystack/deploystack-configuration-directory.md).
+For details about the `.deploystack` directory structure, check our [.deploystack Directory Reference](/docs/deploystack/deploystack-configuration-directory).
