--- a/docs/deploystack/iac-lifecycle.mdx
+++ b/docs/deploystack/iac-lifecycle.mdx
@@ -1,7 +1,6 @@
 ---
 title: Infrastructure as Code Lifecycle
 description: Guide to how DeployStack manages Infrastructure as Code template updates, including automatic synchronization, update triggers, and version control.
-menuTitle: Iac Lifecycle
 ---
 
 # Infrastructure as Code Lifecycle
@@ -12,7 +11,7 @@ This guide explains how DeployStack manages and updates your Infrastructure as C
 
 ### Initial Setup
 
-1. Create a `.deploystack` [configuration directory](/docs/deploystack/deploystack-configuration-directory.md) in your repository
+1. Create a `.deploystack` [configuration directory](/docs/deploystack/deploystack-configuration-directory) in your repository
 2. Add your Docker configuration files:
    - `docker-compose.yml` for Compose configurations
    - `docker-run.txt` for Docker run commands
@@ -21,7 +20,7 @@ This guide explains how DeployStack manages and updates your Infrastructure as C
 
 ### Enabling Automatic Updates
 
-Install the [DeployStack Repository Sync](/docs/deploystack/github-application.md) GitHub App to keep your templates up to date when:
+Install the [DeployStack Repository Sync](/docs/deploystack/github-application) GitHub App to keep your templates up to date when:
 
 - You modify Docker configurations in the `.deploystack` directory
 - Cloud providers update their IaC specifications
@@ -37,7 +36,7 @@ All IaC templates are stored in public and open-source repository: [https://gith
 
 ### Prerequisites for activating the flow
 
-1. You have installed the [DeployStack GitHub app](/docs/deploystack/github-application.md).
+1. You have installed the [DeployStack GitHub app](/docs/deploystack/github-application).
 2. You have created the `.deploystack/docker-run.txt` or `.deploystack/docker-compose.yml` file.
 
 The choice between `docker-run.txt` or `docker-compose.yml` depends on the submission process used to DeployStack. When submitting to DeployStack, you can choose two methods -> Docker Run or Docker Compose.
@@ -46,7 +45,7 @@ The choice between `docker-run.txt` or `docker-compose.yml` depends on the submi
 
 Let's say you want to change your image tag from "deploystack/awesomeapp:v1" to "deploystack/awesomeapp:v2-next".
 
-![DeployStack IaC Lifecycle](/docs/assets/images/deploystack/deploystack-iac-flow-via-github-app.webp)
+![DeployStack IaC Lifecycle](../assets/images/deploystack/deploystack-iac-flow-via-github-app.webp)
 
 1. To do this, you will edit the file `.deploy stack/docker-run.txt` and change your new docker tag
 2. GitHub will send an event to the DeployStack backend with the change of the file `.deploy stack/docker-run.txt` because you have the DeployStack GitHub app installed.
