--- a/docs/deploystack/troubleshooting.mdx
+++ b/docs/deploystack/troubleshooting.mdx
@@ -1,7 +1,6 @@
 ---
 title: Troubleshooting DeployStack Issues
 description: Technical solutions for common DeployStack deployment issues. Find answers to repository submission errors, license restrictions, and Docker Compose validation problems.
-menuTitle: Troubleshooting
 ---
 
 # Troubleshooting
@@ -82,7 +81,7 @@ The submitted docker-compose file doesn't meet the required format or contains u
 **Solution:**
 
 - Validate your docker-compose file syntax
-- Check our [Docker Compose Requirements](/docs/deploystack/docker-compose-requirements.md) page
+- Check our [Docker Compose Requirements](/docs/deploystack/docker-compose-requirements) page
 - Ensure you're using supported features only
 
 ## Error Converting Docker Compose to IaC
@@ -98,7 +97,7 @@ This error occurs when our system cannot convert your docker-compose configurati
 **Solution:**
 
 - Simplify your docker-compose configuration
-- Review our [supported features documentation](/docs/docker-to-iac/supported-docker-compose-variables.md)
+- Review our [supported features documentation](/docs/docker-to-iac/supported-docker-compose-variables)
 - Ensure all services use supported configurations
 
 ## Error Listing Services from Docker Compose
@@ -139,7 +138,7 @@ This indicates an unexpected error in our validation process.
 ## General Troubleshooting Tips
 
 1. Validate your docker-compose file locally before submission
-2. Ensure your repository meets all [requirements](/docs/deploystack/docker-compose-requirements.md)
+2. Ensure your repository meets all [requirements](/docs/deploystack/docker-compose-requirements)
 3. Check that all services use supported configurations
 4. Verify your repository is public and accessible
 
@@ -148,5 +147,5 @@ This indicates an unexpected error in our validation process.
 If you're still experiencing issues:
 
 - Join our [Discord community](https://discord.gg/UjFWwByB)
-- Check our [Docker Compose Requirements](/docs/deploystack/docker-compose-requirements.md)
-- Review [supported features](/docs/docker-to-iac/supported-docker-compose-variables.md)
+- Check our [Docker Compose Requirements](/docs/deploystack/docker-compose-requirements)
+- Review [supported features](/docs/docker-to-iac/supported-docker-compose-variables)
