Add comprehensive documentation for multi-service support and parser implementations
- Introduced new documentation for multi-service support in docker-to-iac, detailing how multiple services are handled in Docker configurations.
- Added parser explanation documentation, outlining how Docker run commands and Docker Compose files are translated into various IaC templates.
- Created detailed documentation for AWS CloudFormation, DigitalOcean, Render.com, and Helm parsers, including prerequisites, architecture, supported variables, and multi-service capabilities.
- Updated project structure documentation to reflect the organization of source code, tests, and configuration files.
- Added a quickstart guide for using the docker-to-iac module, including installation and usage examples.
- Enhanced the main DeployStack documentation to provide an overview of the ecosystem and supported cloud providers.

--- a/docs-backup-2025-06-18T14-33-44-828Z/docs/deploystack/index.mdx
+++ b/docs-backup-2025-06-18T14-33-44-828Z/docs/deploystack/index.mdx
@@ -10,14 +10,14 @@ DeployStack helps you deploy Docker Compose and Docker Run applications across d
 
 ## Documentation Sections
 
-- [Getting Started](/deploystack/getting-started) - Quick introduction and first steps
-- [Docker Compose Requirements](/deploystack/docker-compose-requirements) - Learn about supported configurations
-- [One-Click Deploy](/deploystack/one-click-deploy) - Learn about deployment automation
-- [Troubleshooting](/deploystack/troubleshooting) - Resolve common issues
+- [Getting Started](/docs/deploystack/getting-started.md) - Quick introduction and first steps
+- [Docker Compose Requirements](/docs/deploystack/docker-compose-requirements.md) - Learn about supported configurations
+- [One-Click Deploy](/docs/deploystack/one-click-deploy.md) - Learn about deployment automation
+- [Troubleshooting](/docs/deploystack/troubleshooting.md) - Resolve common issues
 
 ## Additional Resources
 
-- [Docker-to-IaC Module Documentation](/docker-to-iac/index)
+- [Docker-to-IaC Module Documentation](/docs/docker-to-iac/index.md)
 - [Join our Discord](https://discord.gg/UjFWwByB)
 - [Visit DeployStack](https://deploystack.io)
 
