--- a/docs-backup-2025-06-18T14-33-44-828Z/docs/deploystack/one-click-deploy.mdx
+++ b/docs-backup-2025-06-18T14-33-44-828Z/docs/deploystack/one-click-deploy.mdx
@@ -11,7 +11,7 @@ DeployStack leverages existing deployment technologies from cloud providers to m
 
 When you submit your repository to [deploystack.io/submit](https://deploystack.io/submit), we:
 
-1. Generate Infrastructure as Code (IaC) templates for [supported cloud providers](/docker-to-iac/index)
+1. Generate Infrastructure as Code (IaC) templates for [supported cloud providers](/docs/docker-to-iac/index)
 2. Store these templates in our [deploy-templates repository](https://github.com/deploystackio/deploy-templates)
 3. Create provider-specific deployment buttons for your README.md -> by [deploystack.io/deploy-button](https://deploystack.io/deploy-button)
 
@@ -41,7 +41,7 @@ We integrate with cloud providers' native deployment systems. For example:
 
 - **DigitalOcean**: Uses the "Deploy to DigitalOcean" functionality as documented in their [official guide](https://docs.digitalocean.com/products/app-platform/how-to/add-deploy-do-button/)
 - **Kubernetes**: Generates Helm charts that can be deployed to any Kubernetes cluster
-- Check [supported cloud providers](/docker-to-iac/index) for full list
+- Check [supported cloud providers](/docs/docker-to-iac/index) for full list
 
 ### Provider-Specific Templates
 
