--- a/docs-backup-2025-06-18T14-33-44-828Z/docs/docker-to-iac/example-of-a-new-parser.mdx
+++ b/docs-backup-2025-06-18T14-33-44-828Z/docs/docker-to-iac/example-of-a-new-parser.mdx
@@ -343,7 +343,7 @@ const parsers: BaseParser[] = [
 
 ## Testing
 
-Please read our guidelines for testing parsers in the [Testing section](/docker-to-iac/testing).
+Please read our guidelines for testing parsers in the [Testing section](/docs/docker-to-iac/testing).
 
 ## New parser documentation
 
