--- a/docs-backup-2025-06-18T14-33-44-828Z/docs/docker-to-iac/quickstart.mdx
+++ b/docs-backup-2025-06-18T14-33-44-828Z/docs/docker-to-iac/quickstart.mdx
@@ -61,4 +61,4 @@ When using the `translate` function, you can specify:
 - `target`: The IaC language to translate to (e.g., 'CFN' for AWS CloudFormation)
 - `templateFormat`: Output format - 'json', 'yaml', or 'text'
 
-For a complete list of supported parsers and formats, visit the [API documentation](/docker-to-iac/api).
+For a complete list of supported parsers and formats, visit the [API documentation](/docs/docker-to-iac/api).
