--- a/docs-backup-2025-06-18T14-33-44-828Z/docs/index.mdx
+++ b/docs-backup-2025-06-18T14-33-44-828Z/docs/index.mdx
@@ -17,32 +17,32 @@ DeployStack simplifies cloud deployment through three key steps: configure your 
 ### Core Concepts
 
 <Cards>
-<Card icon={<CloudUpload className="text-purple-500" />} title="Quickstart" href="/deploystack/getting-started">
+<Card icon={<CloudUpload className="text-purple-500" />} title="Quickstart" href="/docs/deploystack/getting-started">
 Start with our Getting Started Guide to understand the basics of DeployStack.
 </Card>
-<Card icon={<Terminal className="text-purple-500" />} title="One-Click Deploy" href="/deploystack/one-click-deploy">
+<Card icon={<Terminal className="text-purple-500" />} title="One-Click Deploy" href="/docs/deploystack/one-click-deploy">
 Learn how to enable One-Click Deploy buttons for your repository.
 </Card>
-<Card icon={<FileText className="text-purple-500" />} title="Configuration" href="/deploystack/deploystack-configuration-directory">
+<Card icon={<FileText className="text-purple-500" />} title="Configuration" href="/docs/deploystack/deploystack-configuration-directory">
 Configuration file placed to your repository, telling Zerops how to build and start your app.
 </Card>
 </Cards>
 
 ### Supported Cloud Providers
 
-DeployStack generates infrastructure templates for major cloud providers, each optimized for their specific deployment patterns. AWS CloudFormation templates use Fargate for containerized workloads, DigitalOcean leverages App Platform, and Render.com implements Blueprints for smooth deployment. While translating your docker command to Infrastructure as Code by using [docker-to-iac](/docker-to-iac/index) module, you can choose your target provider.
+DeployStack generates infrastructure templates for major cloud providers, each optimized for their specific deployment patterns. AWS CloudFormation templates use Fargate for containerized workloads, DigitalOcean leverages App Platform, and Render.com implements Blueprints for smooth deployment. While translating your docker command to Infrastructure as Code by using [docker-to-iac](/docs/docker-to-iac/index.md) module, you can choose your target provider.
 
 <Cards>
-<Card href="/docker-to-iac/parser/aws-cloudformation">
+<Card href="/docs/docker-to-iac/parser/aws-cloudformation">
 <img src="https://deploystack.io/img/deploy/aws.svg" alt="AWS" width={47} height={28} className='mx-auto' />
 </Card>
-<Card href="/docker-to-iac/parser/digitalocean">
+<Card href="/docs/docker-to-iac/parser/digitalocean">
 <img src="https://deploystack.io/img/deploy/digitalocean.svg" alt="DigitalOcean" width={56} height={28} className='mx-auto' />
 </Card>
-<Card href="/docker-to-iac/parser/render.com">
+<Card href="/docs/docker-to-iac/parser/render.com">
 <img src="https://deploystack.io/img/deploy/render.svg" alt="Render.com" width={130} height={28} className='mx-auto' />
 </Card>
-<Card href="/docker-to-iac/parser/helm">
+<Card href="/docs/docker-to-iac/parser/helm">
 <img src="https://deploystack.io/img/deploy/helm.svg" alt="Helm" width={47} height={47} className='mx-auto' />
 </Card>
 </Cards>
@@ -80,4 +80,4 @@ Visit our [GitHub repository](https://github.com/deploystackio/docker-to-iac) to
 ## Community and Support
 
 - Join our [Discord community](https://discord.gg/UjFWwByB)
-- Check our [troubleshooting guide](/deploystack/troubleshooting)
+- Check our [troubleshooting guide](/docs/deploystack/troubleshooting.md)
