--- a/docs/docker-to-iac/parser/index.mdx
+++ b/docs/docker-to-iac/parser/index.mdx
@@ -6,9 +6,9 @@ menuTitle: Available parser
 
 # Available parser list for module docker-to-iac
 
-Here you can find the list of available [parsers](/docs/docker-to-iac/parser-explanation.md):
+Here you can find the list of available [parsers](/docker-to-iac/parser-explanation):
 
-- [AWS CloudFormation](/docs/docker-to-iac/parser/aws-cloudformation.md)
-- [Render.com](/docs/docker-to-iac/parser/render.com.md)
-- [DigitalOcean](/docs/docker-to-iac/parser/digitalocean.md)
-- [Helm (Kubernetes)](/docs/docker-to-iac/parser/helm.md)
+- [AWS CloudFormation](/docker-to-iac/parser/aws-cloudformation)
+- [Render.com](/docker-to-iac/parser/render.com)
+- [DigitalOcean](/docker-to-iac/parser/digitalocean)
+- [Helm (Kubernetes)](/docker-to-iac/parser/helm)
