docs: add sidebar entries for improved navigation in docker-to-iac documentation

--- a/docs/docker-to-iac/api.mdx
+++ b/docs/docker-to-iac/api.mdx
@@ -1,6 +1,7 @@
 ---
 title: docker-to-iac module API
 description: Here's everything you need to know about our docker-to-iac module - from listing available cloud providers to converting your Docker setup into deployable code.
+sidebar: Module API
 ---
 
 # docker-to-iac module API list
