--- a/docs/docker-to-iac/environment-variable.mdx
+++ b/docs/docker-to-iac/environment-variable.mdx
@@ -1,6 +1,7 @@
 ---
 title: Environment Variables in docker-to-iac
 description: Learn how to manage environment variables in docker-to-iac. Pass configuration values from .env files to your Infrastructure as Code templates and keep your sensitive data secure.
+sidebar: Environment Variables
 ---
 
 # Environment Variables
