--- a/docs/docker-to-iac/multi-file-configuration.mdx
+++ b/docs/docker-to-iac/multi-file-configuration.mdx
@@ -1,6 +1,7 @@
 ---
 title: Multi-File Configuration in docker-to-iac
 description: Learn how docker-to-iac supports complex Infrastructure as Code templates with multiple interconnected files, including Helm Charts and other multi-file IaC formats.
+sidebar: Multi-File Configuration
 ---
 
 # Multi-File Configuration in docker-to-iac
