--- a/docs/docker-to-iac/parser/helm.mdx
+++ b/docs/docker-to-iac/parser/helm.mdx
@@ -1,6 +1,7 @@
 ---
 title: Helm Parser Documentation
 description: Translate Docker Compose files into Kubernetes Helm Charts with DeployStack docker-to-iac module
+sidebar: Helm Parser
 ---
 
 # Helm - Parser Full Documentation
