--- a/docs/docker-to-iac/quickstart.mdx
+++ b/docs/docker-to-iac/quickstart.mdx
@@ -1,9 +1,10 @@
 ---
 title: Quickstart Guide
 description: Quickstart guide for using docker-to-iac to translate Docker run commands and Docker Compose files into infrastructure as code templates
+icon: Album
 ---
 
-# Quickstart Guide
+# Quickstart Guide to docker-to-iac
 
 ## Installation
 
