--- a/docs/docker-to-iac/parser/render.com.mdx
+++ b/docs/docker-to-iac/parser/render.com.mdx
@@ -1,6 +1,7 @@
 ---
 title: Render.com - Parser Full Documentation
 description: Translate docker docker-compose.yml file into Render.com Infrastructure as Code with DeployStack
+sidebar: Render.com Parser
 ---
 
 # Render.com - Parser Full Documentation
