--- a/docs/docker-to-iac/service-connections.mdx
+++ b/docs/docker-to-iac/service-connections.mdx
@@ -1,6 +1,7 @@
 ---
 title: Service Connections in docker-to-iac
 description: Configure service-to-service communication in multi-container applications with docker-to-iac's service connections feature. Transform Docker Compose service references to cloud provider formats.
+sidebar: Service Connections
 ---
 
 # Service Connections
