Add comprehensive documentation for DeployStack features and configurations
- Introduced .deploystack directory reference for managing Infrastructure as Code templates.
- Detailed Docker Compose requirements and supported properties.
- Explained environment variable management in DeployStack.
- Provided a step-by-step guide for getting started with DeployStack.
- Documented GitHub application integration for automatic template updates.
- Outlined the Infrastructure as Code lifecycle and update triggers.
- Established a branch strategy for maintaining multiple application versions.
- Implemented one-click deployment documentation for cloud providers.
- Created a troubleshooting guide for common DeployStack issues.

--- a/docs/docker-deployment/docker-environment-variables.mdx
+++ b/docs/docker-deployment/docker-environment-variables.mdx
@@ -1,6 +1,7 @@
 ---
 title: Environment Variables in DeployStack
 description: Learn how to manage environment variables in DeployStack using the .deploystack/env file. Support for Docker Compose, Docker run commands, and default values.
+sidebar: Environment Variables
 ---
 
 # Environment Variables in DeployStack
