--- a/docs/docker-deployment/getting-started.mdx
+++ b/docs/docker-deployment/getting-started.mdx
@@ -1,6 +1,8 @@
 ---
 title: Getting Started with DeployStack
 description: Start deploying Docker applications across cloud providers with DeployStack. Step-by-step guide to generating infrastructure templates from Docker configurations.
+sidebar: Getting Started
+icon: Album
 ---
 
 # Getting Started with DeployStack
