--- a/docs/docker-deployment/troubleshooting.mdx
+++ b/docs/docker-deployment/troubleshooting.mdx
@@ -1,6 +1,7 @@
 ---
 title: Troubleshooting DeployStack Issues
 description: Technical solutions for common DeployStack deployment issues. Find answers to repository submission errors, license restrictions, and Docker Compose validation problems.
+sidebar: Troubleshooting
 ---
 
 # Troubleshooting
