Add comprehensive documentation for DeployStack development, global settings, user roles, permissions, and security practices
- Created a detailed Development Guide covering frontend and backend setup, project structure, and key technologies.
- Introduced Global Settings documentation for managing application configurations, including email and authentication settings.
- Added User Roles and Permissions guide to explain role-based access control and team management.
- Developed Security and Privacy documentation outlining account security measures, data protection, and best practices for users.

--- a/docs/deploystack/index.mdx
+++ b/docs/deploystack/index.mdx
@@ -1,23 +1,46 @@
 ---
 title: DeployStack Documentation
-description: Official DeployStack documentation - Learn how to automate Docker Compose and run deployments across cloud providers. Clear guides and technical references for effective deployment automation.
+description: Official DeployStack documentation - The first CI/CD platform designed for MCP servers. Deploy Model Context Protocol servers across cloud providers with one click.
 menuTitle: DeployStack
 ---
 
-# DeployStack - Open Source Cloud Deployment Guide
+# DeployStack - MCP Server CI/CD Platform
 
-DeployStack helps you deploy Docker Compose and Docker Run applications across different cloud providers by automatically generating Infrastructure as Code templates. Our documentation guides you through using DeployStack effectively.
+DeployStack is the first CI/CD platform specifically designed for Model Context Protocol (MCP) servers. We make it easy to deploy and manage MCP servers across different cloud providers, transforming complex technical processes into one-click solutions.
 
-## Documentation Sections
+## Quick Start
 
-- [Getting Started](/deploystack/getting-started) - Quick introduction and first steps
+**New to MCP servers?** Start here to understand how DeployStack simplifies MCP server deployment and management.
+
+- [Getting Started](/deploystack/getting-started) - Your first MCP server deployment
+- [MCP Server Catalog](https://deploystack.io/mcp) - Browse ready-to-deploy MCP servers
+- [One-Click Deploy](/deploystack/one-click-deploy) - Deploy any MCP server instantly
+
+## User Guides
+
+**For administrators and team members** using DeployStack:
+
+- [Global Settings](/deploystack/global-settings) - Configure email, authentication, and system preferences
+- [User Roles and Permissions](/deploystack/roles) - Manage user access and team collaboration
+- [Troubleshooting](/deploystack/troubleshooting) - Resolve common deployment issues
+
+## MCP Server Requirements
+
+**For MCP server creators** who want to make their servers deployable:
+
 - [Docker Compose Requirements](/deploystack/docker-compose-requirements) - Learn about supported configurations
-- [One-Click Deploy](/deploystack/one-click-deploy) - Learn about deployment automation
-- [Troubleshooting](/deploystack/troubleshooting) - Resolve common issues
+- [Submit Your MCP Server](https://deploystack.io/submit) - Add your server to our catalog
+
+## Developer Documentation
+
+**For developers** extending or contributing to DeployStack:
+
+- [Backend Development](/deploystack/development/backend) - API, database, plugins, and testing
+- [Docker-to-IaC Module](/docker-to-iac/index) - Core deployment engine documentation
 
 ## Additional Resources
 
-- [Docker-to-IaC Module Documentation](/docker-to-iac/index)
-- [Join our Discord](https://discord.gg/UjFWwByB)
-- [Visit DeployStack](https://deploystack.io)
+- [Join our Discord](https://discord.gg/UjFWwByB) - Get help and connect with the community
+- [Visit DeployStack](https://deploystack.io) - Main website and MCP server catalog
+- [GitHub Repository](https://github.com/deploystackio/deploystack) - Contribute to the project
 
