--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -17,7 +17,7 @@ DeployStack simplifies MCP server deployment through three key steps: browse our
 ### Core Concepts
 
 <Cards>
-<Card icon={<Rocket className="text-purple-500" />} title="Quick-Start Guide" href="/deploystack/quick-start">
+<Card icon={<Rocket className="text-purple-500" />} title="Quick-Start Guide" href="/deploystack">
 Deploy Model Context Protocol (MCP) servers to selected cloud provider with a single click, eliminating the need for complex setup.
 </Card>
 <Card icon={<CloudUpload className="text-purple-500" />} title="MCP Server Catalog" href="https://deploystack.io/mcp">
