--- a/docs/deploystack/development/backend/index.mdx
+++ b/docs/deploystack/development/backend/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Backend Development
 description: Complete guide to developing and contributing to the DeployStack backend - a high-performance Node.js application built with Fastify, TypeScript, and extensible plugin architecture.
+sidebar: Getting Started
 ---
 
 import { Card, Cards } from 'fumadocs-ui/components/card';
