--- a/docs/deploystack/development/frontend/index.mdx
+++ b/docs/deploystack/development/frontend/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Frontend Development Guide
 description: Complete guide to developing and contributing to the DeployStack frontend application built with Vue 3, TypeScript, and Vite.
+sidebar: Getting Started
 ---
 
 # DeployStack Frontend Development
