fix: update links in documentation for global settings and security details to use correct paths

--- a/docs/deploystack/development/backend/global-settings.mdx
+++ b/docs/deploystack/development/backend/global-settings.mdx
@@ -1018,5 +1018,5 @@ if (await GlobalSettings.isSet('api.key')) {
 
 ---
 
-For more information about the role-based access control system, see [ROLES.md](ROLES.md).
-For security details, see [SECURITY.md](SECURITY.md).
+For more information about the role-based access control system, see [ROLES](/deploystack/development/backend/roles).
+For security details, see [SECURITY](/deploystack/development/backend/security).
