--- a/docs/deploystack/development/backend/mail.mdx
+++ b/docs/deploystack/development/backend/mail.mdx
@@ -642,4 +642,4 @@ const emailResult = await EmailService.sendEmail({...});
 
 ---
 
-For more information about global settings configuration, see [GLOBAL_SETTINGS.md](GLOBAL_SETTINGS.md).
+For more information about global settings configuration, see [GLOBAL_SETTINGS](/deploystack/development/backend/global-settings).
