--- a/docs/deploystack/development/frontend/index.mdx
+++ b/docs/deploystack/development/frontend/index.mdx
@@ -340,6 +340,7 @@ onMounted(() => {
 
 Continue reading the detailed guides:
 
+- [Global Event Bus](/deploystack/development/frontend/event-bus) - Cross-component communication system
 - [Internationalization (i18n)](/deploystack/development/frontend/internationalization) - Multi-language support
 - [Plugin System](/deploystack/development/frontend/plugins) - Extending functionality
 - [Router Optimization](/deploystack/development/frontend/router-optimization) - Performance improvements
