--- a/docs/deploystack/development/frontend/index.mdx
+++ b/docs/deploystack/development/frontend/index.mdx
@@ -197,74 +197,33 @@ import { Mail, Lock, User, Settings, Play, Stop } from 'lucide-vue-next'
 
 ## Environment Configuration
 
-The frontend supports environment variables for both development and production environments.
+The frontend uses a sophisticated environment variable system that works seamlessly across development and production environments. For complete details on configuring and using environment variables, see the dedicated [Environment Variables Guide](/deploystack/development/frontend/environment-variables).
 
-### Development Environment
+### Quick Start
 
-Create a `.env` file in the `services/frontend` directory:
+Create environment files in the `services/frontend` directory:
 
 ```bash
-VITE_API_URL=http://localhost:3000
+# .env (base configuration)
+VITE_DEPLOYSTACK_BACKEND_URL=http://localhost:3000
+VITE_APP_TITLE=DeployStack
+
+# .env.local (local overrides, gitignored)
+VITE_DEPLOYSTACK_BACKEND_URL=http://localhost:3000
 VITE_APP_TITLE=DeployStack (Development)
-VITE_ENABLE_DEBUG=true
 ```
 
-### Production Environment
-
-Environment variables can be passed to the Docker container:
-
-```bash
-docker run -it -p 80:80 \
-  -e VITE_API_URL="https://api.deploystack.io" \
-  -e VITE_APP_TITLE="DeployStack" \
-  -e VITE_ENABLE_DEBUG="false" \
-  deploystack/frontend:latest
-```
-
-### Accessing Environment Variables
-
-Use the `getEnv` utility function for consistent access:
+### Accessing Variables in Code
 
 ```typescript
-import { getEnv } from '@/utils/env'
+import { getEnv, getAllEnv } from '@/utils/env'
 
-// In your components
-const apiUrl = getEnv('VITE_API_URL')
+// Get specific variables
+const backendUrl = getEnv('VITE_DEPLOYSTACK_BACKEND_URL')
 const appTitle = getEnv('VITE_APP_TITLE')
-const debugMode = getEnv('VITE_ENABLE_DEBUG') === 'true'
-```
 
-### Adding New Environment Variables
-
-1. **Add type definitions** in `env.d.ts`:
-
-```typescript
-interface ImportMetaEnv {
-  readonly VITE_API_URL: string
-  readonly VITE_APP_TITLE: string
-  readonly VITE_ENABLE_DEBUG: string
-  readonly VITE_NEW_VARIABLE: string
-}
-
-interface Window {
-  RUNTIME_ENV?: {
-    VITE_API_URL?: string
-    VITE_APP_TITLE?: string
-    VITE_ENABLE_DEBUG?: string
-    VITE_NEW_VARIABLE?: string
-    // Non-VITE variables
-    CUSTOM_VAR?: string
-  }
-}
-```
-
-2. **For non-VITE variables** in Docker, update `env-config.sh`:
-
-```bash
-# Add specific non-VITE_ variables you want to expose
-for var in CUSTOM_VAR OTHER_VAR; do
-  # Script logic here
-done
+// Get all variables (useful for debugging)
+const allEnvVars = getAllEnv()
 ```
 
 ## API Integration
@@ -340,6 +299,7 @@ onMounted(() => {
 
 Continue reading the detailed guides:
 
+- [Environment Variables](/deploystack/development/frontend/environment-variables) - Complete environment configuration guide
 - [Global Event Bus](/deploystack/development/frontend/event-bus) - Cross-component communication system
 - [Internationalization (i18n)](/deploystack/development/frontend/internationalization) - Multi-language support
 - [Plugin System](/deploystack/development/frontend/plugins) - Extending functionality
